# ayase

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ayase-handler/: 2048.py  pyproject.toml
ayase-server/: nitro.config.ts  package.json  tsconfig.json
ayase-server/server/routes/: websocket.ts
ayase-server/tools/: 2048.ts
ayase-server/types/: index.ts
server/: package.json
src/: key.ts  main.ts  observer.ts  style.css
src/plugins/: game2048.ts  plugin-2048.ts
