[project]
name = "ayase-handler"
version = "0.1.1"
description = "Use pyautogui to control the game"
authors = [
    {name = "Vincent-the-gamer",email = "erxianqiaottjt@163.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "websockets (>=15.0.1,<16.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"